--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <p class="lead mb-4 align-items-center bg-info">From choosing the right program to securing funding,
                         Mtendere Education Consult
                         is with you every step of the way.</p>
-                    <a href="#services" class="btn btn-primary me-3">Explore Services</a>
+                    <a href="#" data-target="#formModal" class="btn btn-primary me-3">Explore Services</a>
                 </div>
             </div>
 
@@ -810,8 +810,6 @@
             </div>
         </div>
     </div>
-
-
 
     <div class="untree_co-section">
         <div class="container">
