--- a/service.html
+++ b/service.html
@@ -277,9 +277,12 @@
                         <a href="" class="logo"><img src="images/logo.png" alt=""></a>
                         <div class="header-type">
                             <h1>Choose your future today!</h1>
-                            <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident similique
-                                sunt in
-                                culpa qui officia deserunt mollitia animi est laborum dolorum.</p>
+                            <p>
+                                You choose Your 
+                                <strong>University</strong> and we will help you with the <strong>Application</strong>.
+                                <br>We are here to help you with the <strong>Scholarship</strong> and <strong>Visa</strong> process.
+                            </p>
+                            <p class="text-center"><a href="#" class="btn btn-primary">Get Started</a></p>
                         </div>
                     </header> <!-- .site-header -->
 
@@ -287,12 +290,10 @@
                         <img src="dummy/banner.jpg" alt="Banner">
                     </div>
 
-                    <h2>What is so cool in our college?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum maxime explicabo architecto illo
-                        itaque
-                        expedita eaque harum illum perferendis, accusantium dolores, culpa alias. At impedit labore,
-                        quidem
-                        suscipit cumque sapiente!</p>
+                    <h2>What do we have for you in university?</h2>
+                    <p>We have prepared a lot of things for you in university. We have prepared a lot of things for you in university.
+
+                    </p>
 
                     <div class="row">
                         <div class="col-md-6">
@@ -516,6 +517,7 @@
             </div>
         </div>
     </div>
+
     
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
