--- a/about.html
+++ b/about.html
@@ -295,15 +295,14 @@
         </div>
         <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <h3 class="line-bottom mb-4">Why Choose Us</h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-            live the blind texts. </p>
+          <p>Mtendere Education Consult empowers students with trusted, transparent guidance to access top global universities.<br>
+            We simplify your journey through personalized support, scholarships, and end-to-end admission services. </p>
 
           <div class="custom-accordion" id="accordion_1">
             <div class="accordion-item">
               <h2 class="mb-0">
                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">Good
-                  Teachers and Staffs</button>
+                  aria-expanded="true" aria-controls="collapseOne">Professional Advisors</button>
               </h2>
 
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion_1">
@@ -313,10 +312,15 @@
                       <img src="images/img-school-1-min.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div>
-                      <p>Far far away, behind the word mountains, far from the countries Vokalia
-                        and Consonantia, there live the blind texts. </p>
-                      <p>Separated they live in Bookmarksgrove right at the coast of the
-                        Semantics, a large language ocean.</p>
+                      <p>Profession tutors are not only skilled in their subjects but also understand the unique challenges
+                        faced by international students. They provide personalized support, ensuring that
+                        each student receives the attention and guidance they need to succeed.</p>
+                      </p>
+                      <p>
+                        Our tutors are not just educators; they are mentors who inspire and motivate students to
+                        reach their full potential. They create a supportive learning environment that fosters
+                        curiosity, critical thinking, and a love for learning.</p>
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -335,9 +339,15 @@
                     <div class="accordion-img mr-4">
                       <img src="images/img-school-2-min.jpg" alt="Image" class="img-fluid">
                     </div>
-                    <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores
-                      amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita
-                      est. Diam sanctus gubergren sit rebum clita amet.</p>
+                    <p class="mb-4 pb-2">Good characters are essential for success in any field. They 
+                      help students build strong relationships, communicate effectively, and navigate
+                      challenges with resilience and integrity. At Mtendere Education Consult, we
+                      prioritize character development alongside academic achievement.</p>
+                    <p>We believe that education is not just about acquiring knowledge; it's also about
+                      developing the skills and values that will help students succeed in life. Our
+                      tutors are committed to fostering good character traits such as honesty, respect,
+                      responsibility, and empathy in their students.
+                    </p>
                     <div class="d-flex mb-3">
                       <div class="btn-icon bg-primary mr-4">
                         <i class="fa fa-graduation-cap text-white"></i>
@@ -353,9 +363,12 @@
                         <i class="fa fa-certificate text-white"></i>
                       </div>
                       <div class="mt-n1">
-                        <h4>International Certificate</h4>
-                        <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                          nonumy et eos dolor magna ipsum.</p>
+                        <h4>Career Guidance</h4>
+                        <p>
+                          Education Consult helps students make informed decisions about their
+                          educational and career paths. Our experienced advisors provide personalized
+                          support, helping students identify their strengths, interests, and goals.</p>
+                        </p>
                       </div>
                     </div>
                     <div class="d-flex">
@@ -363,9 +376,12 @@
                         <i class="fa fa-book-reader text-white"></i>
                       </div>
                       <div class="mt-n1">
-                        <h4>Online Classes</h4>
-                        <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita
-                          magna kasd no nonumy et eos dolor magna ipsum.</p>
+                        <h4>Programs Of Your Choice</h4>
+                        <p class="m-0">
+                          We offer a wide range of programs to suit the diverse needs and interests of our
+                          students. Whether you're looking for undergraduate, postgraduate, or vocational
+                          courses, we have something for everyone.</p>
+                        </p>
                       </div>
                     </div>
                     <div>
@@ -383,7 +399,7 @@
             <div class="accordion-item">
               <h2 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-                  aria-expanded="false" aria-controls="collapseThree">Your Children are Safe</button>
+                  aria-expanded="false" aria-controls="collapseThree">International students safety</button>
               </h2>
 
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion_1">
@@ -393,11 +409,18 @@
                       <img src="images/img-school-3-min.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div>
-                      <p>When she reached the first hills of the Italic Mountains, she had a last
-                        view back on the skyline of her hometown Bookmarksgrove, the headline of
-                        Alphabet Village and the subline of her own road, the Line Lane.</p>
-                      <p>Pityful a rethoric question ran over her cheek, then she continued her
-                        way.</p>
+                      <p>
+                        International students often face unique challenges when studying abroad, including
+                        cultural differences, language barriers, and homesickness. At Mtendere Education
+                        Consult, we prioritize the safety and well-being of our students.</p>
+                      <p>We provide comprehensive support to help students navigate these challenges and
+                        ensure a smooth transition to their new environment. Our team is dedicated to
+                        providing personalized assistance, including pre-departure orientation, on-campus
+                        support, and ongoing guidance throughout their studies.</p>
+                      <p>We also work closely with universities and colleges to ensure that our students
+                        have access to the resources and support they need to succeed. This includes
+                        academic advising, counseling services, and extracurricular activities that promote
+                        cultural exchange and integration.</p>
                     </div>
                   </div>
 
@@ -422,42 +445,16 @@
           <div class="section-title position-relative mb-4">
             <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?
             </h6>
-            <h1 class="display-4">Why You Should Start Learning with Us?</h1>
+            <h1 class="display-4">Why Study Abroad with Us?</h1>
           </div>
-          <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores
-            amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita
-            est. Diam sanctus gubergren sit rebum clita amet.</p>
-          <div class="d-flex mb-3">
-            <div class="btn-icon bg-primary mr-4">
-              <i class="fa fa-graduation-cap text-white"></i>
-            </div>
-            <div class="mt-n1">
-              <h4>Skilled Instructors</h4>
-              <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                nonumy et eos dolor magna ipsum.</p>
-            </div>
-          </div>
-          <div class="d-flex mb-3">
-            <div class="btn-icon bg-secondary mr-4">
-              <i class="fa fa-certificate text-white"></i>
-            </div>
-            <div class="mt-n1">
-              <h4>International Certificate</h4>
-              <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                nonumy et eos dolor magna ipsum.</p>
-            </div>
-          </div>
-          <div class="d-flex">
-            <div class="btn-icon bg-warning mr-4">
-              <i class="fa fa-book-reader text-white"></i>
-            </div>
-            <div class="mt-n1">
-              <h4>Online Classes</h4>
-              <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita
-                magna kasd no nonumy et eos dolor magna ipsum.</p>
-            </div>
-          </div>
-        </div>
+          <p class="mb-4 pb-2"> 
+            <br>We are a registered organization under the Malawi Government Business Registration Act (No 12 of
+            2012), with a strong passion for education and a mission to connect aspiring students with prestigious
+            international universities and colleges.</p>
+          <p class="mb-4 pb-2">We are dedicated to offering comprehensive support for students pursuing higher
+            education — from application assistance to personalized guidance. Our team of experienced
+            professionals is committed to providing the highest level of service, ensuring that each student
+            receives the support they need to succeed.</p>
         <div class="col-lg-5" style="min-height: 500px;">
           <div class="position-relative h-100">
             <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
@@ -467,6 +464,81 @@
     </div>
   </div>
   <!-- Feature Start -->
+
+  <div class="untree_co-section bg-light py-12">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-7 text-center mx-auto">
+                  <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
+                  <div class="owl-carousel wide-slider-testimonial">
+                      <!-- Testimonial 1 -->
+                      <div class="item">
+                          <blockquote class="block-testimonial">
+                              <p class="text-lg font-medium text-gray-600">
+                                  &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
+                                  found the right scholarship, and I’m now studying abroad in a field I’m passionate
+                                  about.&rdquo;
+                              </p>
+                              <div class="author mt-4">
+                                  <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
+                                  <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
+                                  <p class="position text-gray-500">Engineering Student, University of Toronto</p>
+                              </div>
+                          </blockquote>
+                      </div>
+
+                      <!-- Testimonial 2 -->
+                      <div class="item">
+                          <blockquote class="block-testimonial">
+                              <p class="text-lg font-medium text-gray-600">
+                                  &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I now feel
+                                  confident about my academic future, and I couldn't be more grateful.&rdquo;
+                              </p>
+                              <div class="author mt-4">
+                                  <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
+                                  <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
+                                  <p class="position text-gray-500">Law Student, University of Manchester</p>
+                              </div>
+                          </blockquote>
+                      </div>
+
+                      <!-- Testimonial 3 -->
+                      <div class="item">
+                          <blockquote class="block-testimonial">
+                              <p class="text-lg font-medium text-gray-600">
+                                  &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and it feels
+                                  incredible to see my hard work finally paying off. Highly recommend their
+                                  services!&rdquo;
+                              </p>
+                              <div class="author mt-4">
+                                  <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
+                                  <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
+                                  <p class="position text-gray-500">Product Designer, University of California</p>
+                              </div>
+                          </blockquote>
+                      </div>
+
+                      <!-- Testimonial 4 -->
+                      <div class="item">
+                          <blockquote class="block-testimonial">
+                              <p class="text-lg font-medium text-gray-600">
+                                  &ldquo;Mtendere made the entire process of studying abroad so seamless. From
+                                  application to scholarship, everything was handled with care. I’m now living my
+                                  dream in the US!&rdquo;
+                              </p>
+                              <div class="author mt-4">
+                                  <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
+                                  <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
+                                  <p class="position text-gray-500">Computer Science Student, Stanford University</p>
+                              </div>
+                          </blockquote>
+                      </div>
+                  </div>
+                  <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success Stories</button>
+              </div>
+          </div>
+      </div>
+  </div>
 
   <!-- Footer Start -->
   <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
