--- a/blog.html
+++ b/blog.html
@@ -379,6 +379,81 @@
         </div>
     </div> <!-- /.untree_co-section -->
 
+    <div class="untree_co-section bg-light py-12">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 text-center mx-auto">
+                    <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
+                    <div class="owl-carousel wide-slider-testimonial">
+                        <!-- Testimonial 1 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
+                                    found the right scholarship, and I’m now studying abroad in a field I’m passionate
+                                    about.&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
+                                    <p class="position text-gray-500">Engineering Student, University of Toronto</p>
+                                </div>
+                            </blockquote>
+                        </div>
+
+                        <!-- Testimonial 2 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I now feel
+                                    confident about my academic future, and I couldn't be more grateful.&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
+                                    <p class="position text-gray-500">Law Student, University of Manchester</p>
+                                </div>
+                            </blockquote>
+                        </div>
+
+                        <!-- Testimonial 3 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and it feels
+                                    incredible to see my hard work finally paying off. Highly recommend their
+                                    services!&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
+                                    <p class="position text-gray-500">Product Designer, University of California</p>
+                                </div>
+                            </blockquote>
+                        </div>
+
+                        <!-- Testimonial 4 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Mtendere made the entire process of studying abroad so seamless. From
+                                    application to scholarship, everything was handled with care. I’m now living my
+                                    dream in the US!&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
+                                    <p class="position text-gray-500">Computer Science Student, Stanford University</p>
+                                </div>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success Stories</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="container mt-5 pt-5">
