--- a/course.html
+++ b/course.html
@@ -603,83 +603,80 @@
         </div>
     </section>
 
-    <!-- TESTIMONIAL SECTION -->
-    <section id="testimonials" class="bg-light py-5">
+    <div class="untree_co-section bg-light py-12">
         <div class="container">
-            <h2 class="text-center mb-4">What Our Students Say</h2>
+            <div class="row">
+                <div class="col-lg-7 text-center mx-auto">
+                    <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
+                    <div class="owl-carousel wide-slider-testimonial">
+                        <!-- Testimonial 1 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
+                                    found the right scholarship, and I’m now studying abroad in a field I’m passionate
+                                    about.&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
+                                    <p class="position text-gray-500">Engineering Student, University of Toronto</p>
+                                </div>
+                            </blockquote>
+                        </div>
 
-            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                        <!-- Testimonial 2 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I now feel
+                                    confident about my academic future, and I couldn't be more grateful.&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
+                                    <p class="position text-gray-500">Law Student, University of Manchester</p>
+                                </div>
+                            </blockquote>
+                        </div>
 
-                    <!-- Testimonial 1 -->
-                    <div class="carousel-item active">
-                        <div class="row justify-content-center">
-                            <div class="col-md-8 text-center">
-                                <img src="assets/images/testimonial1.jpg" alt="Elena Todorova"
-                                    class="rounded-circle mb-3" style="width: 100px; height: 100px;">
-                                <blockquote class="blockquote">
-                                    <p class="mb-3">"The campus is very new and comfortable. I like it because I can
-                                        study, work, and still be with my family. Studying here helps me teach my child
-                                        new words at home."</p>
-                                </blockquote>
-                                <footer class="blockquote-footer">
-                                    Elena Todorova <br>
-                                    <small>BSc (Hons) Business and Tourism Management, GBS UK</small>
-                                </footer>
-                            </div>
+                        <!-- Testimonial 3 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and it feels
+                                    incredible to see my hard work finally paying off. Highly recommend their
+                                    services!&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
+                                    <p class="position text-gray-500">Product Designer, University of California</p>
+                                </div>
+                            </blockquote>
+                        </div>
+
+                        <!-- Testimonial 4 -->
+                        <div class="item">
+                            <blockquote class="block-testimonial">
+                                <p class="text-lg font-medium text-gray-600">
+                                    &ldquo;Mtendere made the entire process of studying abroad so seamless. From
+                                    application to scholarship, everything was handled with care. I’m now living my
+                                    dream in the US!&rdquo;
+                                </p>
+                                <div class="author mt-4">
+                                    <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
+                                    <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
+                                    <p class="position text-gray-500">Computer Science Student, Stanford University</p>
+                                </div>
+                            </blockquote>
                         </div>
                     </div>
-
-                    <!-- Testimonial 2 -->
-                    <div class="carousel-item">
-                        <div class="row justify-content-center">
-                            <div class="col-md-8 text-center">
-                                <img src="assets/images/testimonial2.jpg" alt="Egor Yantsov" class="rounded-circle mb-3"
-                                    style="width: 100px; height: 100px;">
-                                <blockquote class="blockquote">
-                                    <p class="mb-3">"When I arrived, I had a lot of support from the academic office.
-                                        Enjoy your time here – it's one of the most amazing years of your life."</p>
-                                </blockquote>
-                                <footer class="blockquote-footer">
-                                    Egor Yantsov <br>
-                                    <small>BA(Hons) Business and Management, GBS Malta</small>
-                                </footer>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Testimonial 3 -->
-                    <div class="carousel-item">
-                        <div class="row justify-content-center">
-                            <div class="col-md-8 text-center">
-                                <img src="assets/images/testimonial3.jpg" alt="Diksha Jain" class="rounded-circle mb-3"
-                                    style="width: 100px; height: 100px;">
-                                <blockquote class="blockquote">
-                                    <p class="mb-3">"GBS's guidance on employability was invaluable. I now manage social
-                                        media and branding for a leading gourmet brand."</p>
-                                </blockquote>
-                                <footer class="blockquote-footer">
-                                    Diksha Jain <br>
-                                    <small>HND in Business, GBS Dubai</small>
-                                </footer>
-                            </div>
-                        </div>
-                    </div>
-
+                    <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success Stories</button>
                 </div>
-
-                <!-- Carousel Controls -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </button>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
