--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/easing/easing.js">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.css">
+    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="lib/animate/animate.min.css">
+    <link rel="stylesheet" href="lib/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="lib/lightbox/css/lightbox.min.css">
+    <link rel="stylesheet" href="lib/aos/aos.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
