--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="lib/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="lib/lightbox/css/lightbox.min.css">
     <link rel="stylesheet" href="lib/aos/aos.css">
+    <link rel="stylesheet" href="lib/bootstrap/scss/style.scss">
+    <link rel="stylesheet" href="lib/bootstrap/scss/bootstrap/scss/bootstrap.scss">
+
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
 
