--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/boo tstrap.css">
     <link rel="stylesheet" href="lib/easing/easing.js">
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.css">
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.css">
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.min.js"></script>
@@ -274,7 +275,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <a href="#" class="category d-flex align-items-start h-100">
                         <div>
-                            <i class="uil uil-chart-pie"></i>
+                            <i class=""></i>
                         </div>
                         <div>
                             <h3>Marketing</h3>
