--- a/index.html
+++ b/index.html
@@ -8,31 +8,20 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link rel="stylesheet" href="lib/bootstrap/css/boo tstrap.css">
-    <link rel="stylesheet" href="lib/easing/easing.js">
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.css">
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.css">
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="lib/animate/animate.min.css">
-    <link rel="stylesheet" href="lib/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="lib/lightbox/css/lightbox.min.css">
-    <link rel="stylesheet" href="lib/aos/aos.css">
-    <link rel="stylesheet" href="lib/bootstrap/scss/style.scss">
-    <link rel="stylesheet" href="lib/bootstrap/scss/bootstrap/scss/bootstrap.scss">
-
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
 
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.min.js"></script>
@@ -275,7 +264,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <a href="#" class="category d-flex align-items-start h-100">
                         <div>
-                            <i class=""></i>
+                            <i class="uil uil-chart-pie"></i>
                         </div>
                         <div>
                             <h3>Marketing</h3>
