--- a/about.html
+++ b/about.html
@@ -140,12 +140,11 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="container text-center py-5">
-          <h1 class="text-white display-1">ABOUT US</h1>
-          <div class="d-inline-flex text-white mb-5">
-            <p class="m-0 text-uppercase"><a class="text-white" href="index.html">Home</a></p>
-            <i class="fa fa-angle-double-right pt-1 px-3"></i>
-            <p class="m-0 text-uppercase">About</p>
-          </div>
+          <div class="burger">
+            <span>Home /</span>
+            <span>About</span>
+            <span></span>
+          </div>          
         </div>
         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
           <div class="input-group">
